--- a/src/assets/pages/HajjPrograms/HajjPrograms.css
+++ b/src/assets/pages/HajjPrograms/HajjPrograms.css
@@ -9,9 +9,10 @@
 .par{
     background-color: rgb(71, 69, 65);
     box-shadow: 5px 10px 20px rgb(255, 153, 0) inset;
-    height: 3000px;
+     height:3000px ;
     margin: auto;
-    
+    margin-bottom: 50px;
+    border-radius: 50px;
 }
 .par1 {
   padding-top: 50px;
@@ -53,6 +54,68 @@
   margin-top: 90px;
 
 }
+
+
+
+@media(max-width: 850px){
+    .par{
+        height: 3100px;
+    }
+    .pdetiles {
+        display: flex;
+    text-align: center;
+  
+    }
+
+.imeg{
+
+    height: 280px;
+    width: 280px;
+    margin: auto;
+    right: 20%;
+    text-align: center;
+
+}
+.parent-chiled{
+    margin-top: 300px;
+    display: grid;
+    grid-template-columns: repeat(3,25%);
+ gap: 50px;
+ left: 0px;
+ 
+
+}
+.parent-chiled .chiled {
+    width: 150px;
+    height: 100;
+
+}
+
+  
+}
+
+@media(max-width: 700px){
+    .parent-chiled{
+        margin-top: 300px;
+        display: grid;
+        grid-template-columns: repeat(2,50%);
+     gap: 50px;
+     left: 0px;
+     
+    
+    }
+    .parent-chiled .chiled {
+        width: 150px;
+     
+    
+    }  
+    .hotel{
+        margin-top: 900px !important;
+    } 
+    .par{
+        height: 3400px;
+    }
+}
 .chiled {
    
   width: 200px;
@@ -64,14 +127,14 @@
 }
 .chiled span{
 
-font-size: 20px;
+font-size: 18px;
     text-align: right;
 }
 .chiled i{
     padding-left: 10px;
 }
 .my-4{
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     padding: 20px;
 }
@@ -80,7 +143,11 @@ font-size: 20px;
     margin-top: 300px;
     height: 700px;
 }
-
+@media(max-width: 850px){
+    .hotel{
+        margin-top: 500px;
+    }
+}
 
 .hotel img{
     height: 500px !important;
@@ -89,11 +156,18 @@ font-size: 20px;
     border-radius: 25%;
 }
 
+@media(max-width: 820px){
+
+ h2{
+   
+    font-size: 20px !important;
+ 
+    width: 90% !important;
 
 
+}
 
-
-
+}
 .gift-parent{
     margin-top: 10px;
     position: relative;
@@ -108,7 +182,7 @@ font-size: 20px;
    border-radius: 50%;
    padding: 20px;
    text-align: center;
-   width: 1000px;
+   width:90%;
    margin:auto;
    background-color: rgba(85, 77, 51, 0.733);
 }
@@ -120,17 +194,19 @@ font-size: 20px;
     font-weight: 700;
     display: none;
     position: absolute;
-    top: 10%;
+    top: -30px;
     left: 25%;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
+ 
 }
 .gift div:hover p {
     display: block;
     position: absolute;
     top: 10%;
     left: 50%;
+  
     transform: translate(-50%, -50%);
     color: rgb(234, 235, 240);
     text-align: center;
@@ -149,6 +225,12 @@ font-size: 20px;
     transition: 0.5s;
     border-radius: 50%;
 }
+@media(max-width: 700px){
+    .gift div:hover p {
+        top: -30px !important;
+        font-size: 20px !important;
+    }
+}
 .gift div:hover{
     opacity: 2;
 }
@@ -159,6 +241,84 @@ font-size: 20px;
 }
 
 
+@media(max-width: 700px){
+    .gift1{
+        width: 200px !important;
+    height: 200px !important;
+    background-size: cover;
+    position: absolute;
+   left: 10px !important;
+
+
+    }
+    .gift2{
+        width: 150px !important;
+        height: 150px !important;
+        left: 200px !important;
+       margin-top:  100px !important;
+
+    }
+    .gift3{
+        width: 150px !important;
+        height: 150px !important;
+        margin-left: 300px !important;
+        margin-top: 10px !important;
+
+    }
+    .gift4{
+        margin-left: 80px !important;
+        width: 170px !important;
+        height: 170px !important;
+        margin-top: 250px !important;
+    }
+    .gift5{
+        width: 200px !important;
+        height: 200px !important;
+        margin-left: 270px !important;
+        margin-top: 250px !important;
+
+    }
+}
+
+/* @media(max-width: 950px){
+    
+    .gift1{
+        width: 300px !important;
+    height: 300px !important;
+    background-size: cover;
+    position: absolute;
+   left: 20px !important;
+
+
+    }
+    .gift2{
+        width: 200px !important;
+        height: 200px !important;
+        left: 350px !important;
+       margin-top:  100px !important;
+
+    }
+    .gift3{
+        width: 200px !important;
+        height: 200px !important;
+        margin-left: 550px !important;
+        margin-top: 10px !important;
+
+    }
+    .gift4{
+        margin-left: 100px !important;
+        width: 170px !important;
+        height: 170px !important;
+        margin-top: 300px !important;
+    }
+    .gift5{
+        width: 300px !important;
+        height: 300px !important;
+        margin-left: 400px !important;
+        margin-top: 290px !important;
+
+    }
+} */
 
 .gift .gift1{
     position: absolute;
@@ -216,8 +376,8 @@ font-size: 20px;
 }
 .gift .gift5{
     position: absolute;
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     background-color: rgb(95, 76, 1);
     border-radius: 50%;
     margin-top: 90px;
@@ -229,6 +389,8 @@ font-size: 20px;
     background-position: center;
 border: 10px solid rgb(107, 89, 16);
 }
+
+
 
 .parent-vidios{
     margin-top: 600px;
@@ -244,7 +406,7 @@ border: 10px solid rgb(107, 89, 16);
     border-radius: 20%;
     padding: 20px;
     text-align: center;
-    width: 1000px;
+    width: 90%;
     margin:auto;
     background-color: rgba(85, 77, 51, 0.733);
 }
