--- a/src/assets/components/BusInUmrahProgram/BusInUmrahProgram.css
+++ b/src/assets/components/BusInUmrahProgram/BusInUmrahProgram.css
@@ -1,16 +1,72 @@
-.bus-in-umrah-program img{
-    width: 100%;
+.bus-in-umrah-program{
+    border: 2px solid rgba(255,255,255,0.3);
+    border-radius: 5px;
+    margin: 150px 30px;
+    padding-bottom: 40px;
 }
+
 .busCompany-img{
     background-image: url(../../images/busCompany.jpg);
-    background-size: 100% 100%; 
+    background-size: 100% 100%;
     height: 200px;
-    padding: 40px;
-    
+    width: 80%;
+    margin: auto;
+    margin-top: -100px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 15px 3px rgba(0, 0, 0, 0.5);
 }
+
 .busCompany-img h1{
-    background-color: black;
-    width: fit-content;
-    margin-left: 50px;
+      font-size: 48px; 
+      font-weight: bold; 
+      background: linear-gradient(to left, black , rgba(255,255,255,0.3) , black, rgba(255,255,255,0.3), black , rgba(255,255,255,0.3) , black, rgba(255,255,255,0.3));
+      -webkit-background-clip: text; 
+      -webkit-text-fill-color: transparent;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      padding-left: 10%;
+      padding-top: 5px;
+}
+
+.busCompany-content p{
+   text-align: center;
+   font-size: 32px;
+   padding: 20px;
+}
+.type-bus p{
+    color: var(--color-gold);
+    background-color: #6b6e677d;
+    border-radius: 5px;
+    box-shadow: 10px 10px 15px 3px rgba(0, 0, 0, 0.5), 0 0 15px 3px rgba(255, 255, 255, 0.5);
+}
+.busCompany-content p span{
+    font-size: 32px;
+    padding: 20px;
+    color: var(--color-text);
+ }
+.type-bus{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.type-bus ul {
+    font-size: 36px;
     padding: 10px;
+    direction: rtl;
+    border-radius: 5px;
+    background-color: #6b6e677d;
+    color: var(--color-gold);
+    box-shadow: 10px 10px 15px 3px rgba(0, 0, 0, 0.5), 0 0 15px 3px rgba(255, 255, 255, 0.5);
+
+}
+.type-bus ul li{
+    list-style-type: none;
+    font-size: 22px;
+    padding: 20px 40px;
+    color: var(--color-text);
+    border-bottom: 2px solid rgba(255,255,255,0.3); ;
+}
+.btn-transport-details{
+    margin: 30px 0;
+    text-align: center;
 }
