--- a/src/assets/pages/DashBoardManager/DashBoardManager.css
+++ b/src/assets/pages/DashBoardManager/DashBoardManager.css
@@ -56,8 +56,8 @@ margin-right: 50px;
     display: flex;
     flex-direction: row;
     gap: 13%;
-  box-shadow: 5px 10px 20px #968f69da inset;
-  width: 75%;
+  box-shadow: 5px 10px 20px 5px #968f69da inset;
+  width: 78%;
 }
 .maneger-hajj-detil img{
     width: 400px;
