--- a/src/assets/pages/HajjPrograms/HajjPrograms.css
+++ b/src/assets/pages/HajjPrograms/HajjPrograms.css
@@ -9,7 +9,7 @@
 .par{
     background-color: rgb(71, 69, 65);
     box-shadow: 5px 10px 20px rgb(255, 153, 0) inset;
-     height:3000px ;
+     height:fit-content ;
     margin: auto;
     margin-bottom: 50px;
     border-radius: 50px;
@@ -17,7 +17,7 @@
 .par1 {
   padding-top: 50px;
   width: 80%;
-  height: 500px;
+  height: 115vh;
   position: relative;
   margin:auto;
  
@@ -39,7 +39,7 @@
   border-radius: 50%;
   z-index: 1;
   position: absolute;
-  right: -100px;
+  right: -50px;
   
 
 }
@@ -50,7 +50,7 @@
   z-index: 2;
   height: 500px;
   position: absolute;
-  left: 50px;
+  left:0;
   margin-top: 90px;
 
 }
@@ -109,13 +109,22 @@
      
     
     }  
-    .hotels{
-        margin-top: 900px !important;
-    } 
+   
     .par{
         height: 3400px;
     }
 }
+
+.part2{
+    padding: 10px;
+}
+.hotel-in-prog-haj {
+    height: fit-content;
+    display: grid;
+    align-content: center;
+    justify-content: space-around;
+}
+
 .chiled {
    
   width: 200px;
@@ -140,23 +149,12 @@ font-size: 18px;
 }
 
 
-.hotels{
-    margin-top: 300px;
-    height: 700px;
-}
+
 @media(max-width: 850px){
-    .hotels{
-        margin-top: 500px;
-    }
+   
 }
 
-.hotels img{
 
-    height: 500px !important;
-    width: 500px !important;
-    margin: auto;
-    border-radius: 25%;
-}
 
 @media(max-width: 820px){
 
@@ -171,7 +169,7 @@ font-size: 18px;
 
 }
 .gift-parent{
-    margin-top: 10px;
+    margin-top: 50px;
     position: relative;
     color: antiquewhite;
 }
@@ -428,11 +426,11 @@ video{
 .book-trip {
 width: 100%;
 height: 100px;
+margin-top: 50px;
 text-align: center;
 }
 .book-trip  button{
     margin: auto;
-    margin-top: 180px;
     width: 50%;
     border: none;
     border-radius: 50%;
